--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "corakstudio/rising",
-    "description": "laravel 5.4",
+    "description": "laravel 5.4 auth",
     "type": "library",
     "license": "MIT",
     "authors": [
