--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,10 @@
     ],
 	"minimum-stability": "dev",
     "require": {
-        "php" : "~5.6|~7.0"
+        "php" : "~5.6|~7.0",
+        "latrell/captcha": "dev-master",
+        "msurguy/honeypot": "^1.0",
+        "laravel/socialite": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit" : ">=5.4.3",
